@@ -2,6 +2,7 @@
 v4.2.2-git
 ----------
 
+[jan] Fix search attribute of SQL shares on Oracle.
 [mjr] Fix adding a new tasklist to the syncronized tasklists (Bug #13642).
 [jan] Pass current start date of recurring tasks to dynamic interface.
 [jan] Fix setting task list name for external tasks.
